# home-test

./: README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  diesel.toml
backend/migrations/2024-11-15-203508_user/: up.sql
backend/migrations/2024-11-15-203515_guestbook/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/api/: guestbook.rs  mod.rs  user.rs
frontend/: Dockerfile  package-lock.json
frontend/app/: hooks.tsx  root.tsx
frontend/app/routes/: _index.tsx  guestbooks.$id.tsx  guestbooks._index.tsx  guestbooks.new.tsx  guestbooks.update.$id.tsx  users.$id.tsx  users._index.tsx  users.new.tsx  users.update.$id.tsx
frontend/app/types/: index.ts
