[package]
name = "apigen_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version =  "0.7.5", features = ["macros"] }
bb8 = "0.8"
diesel = "2"
diesel-async = { version = "0.3", features = ["postgres", "bb8"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
